# nba_siren

./: .gitignore  Cargo.toml  endpoints_v2.json  nba_siren.db  out.txt  playbyplay.db  readme.md  video_list.txt
py/: plotter.py  shotchart.py
src/: main.rs  nba2.rs  remote.rs
src/nba/: db.rs  endpoints.rs  live_data.rs  mod.rs  params.rs
static_data/: player_info.json
