[package]
name = "nbasiren"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4"
serde = {version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
ureq = {version = "2.4.0", features = ["json"]}
clap = { version = "3.1.9", features = ["derive"] }
polars = { version = "0.14.8", features = ["json", "strings", "rows"] } 
tabled = "0.7.0"
anyhow = "1.0"
webbrowser = "0.7.1"
chrono = "0.4"
rusqlite = { version = "0.27.0", features = ["bundled"] }